# idse

./: README.md  pyproject.toml  setup.py
idse/: __init__.py  api.py  cli.py  common.py  confirm.py  edit_dict.py  edit_list.py  edit_table.py  find_item.py  qt.py
